; ModuleID = '/home/carl/AnghaBench/darknet/src/extr_yolo_layer.c_yolo_num_detections.c'
source_filename = "/home/carl/AnghaBench/darknet/src/extr_yolo_layer.c_yolo_num_detections.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32, i32, float* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @yolo_num_detections(%struct.TYPE_4__* byval(%struct.TYPE_4__) align 8 %0, float %1) #0 {
  %3 = alloca float, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store float %1, float* %3, align 4
  store i32 0, i32* %6, align 4
  store i32 0, i32* %4, align 4
  br label %8

8:                                                ; preds = %49, %2
  %9 = load i32, i32* %4, align 4
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %0, i32 0, i32 0
  %11 = load i32, i32* %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %0, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = mul nsw i32 %11, %13
  %15 = icmp slt i32 %9, %14
  br i1 %15, label %16, label %52

16:                                               ; preds = %8
  store i32 0, i32* %5, align 4
  br label %17

17:                                               ; preds = %45, %16
  %18 = load i32, i32* %5, align 4
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %0, i32 0, i32 2
  %20 = load i32, i32* %19, align 8
  %21 = icmp slt i32 %18, %20
  br i1 %21, label %22, label %48

22:                                               ; preds = %17
  %23 = load i32, i32* %5, align 4
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %0, i32 0, i32 0
  %25 = load i32, i32* %24, align 8
  %26 = mul nsw i32 %23, %25
  %27 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %0, i32 0, i32 1
  %28 = load i32, i32* %27, align 4
  %29 = mul nsw i32 %26, %28
  %30 = load i32, i32* %4, align 4
  %31 = add nsw i32 %29, %30
  %32 = call i32 @entry_index(%struct.TYPE_4__* byval(%struct.TYPE_4__) align 8 %0, i32 0, i32 %31, i32 4)
  store i32 %32, i32* %7, align 4
  %33 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %0, i32 0, i32 3
  %34 = load float*, float** %33, align 8
  %35 = load i32, i32* %7, align 4
  %36 = sext i32 %35 to i64
  %37 = getelementptr inbounds float, float* %34, i64 %36
  %38 = load float, float* %37, align 4
  %39 = load float, float* %3, align 4
  %40 = fcmp ogt float %38, %39
  br i1 %40, label %41, label %44

41:                                               ; preds = %22
  %42 = load i32, i32* %6, align 4
  %43 = add nsw i32 %42, 1
  store i32 %43, i32* %6, align 4
  br label %44

44:                                               ; preds = %41, %22
  br label %45

45:                                               ; preds = %44
  %46 = load i32, i32* %5, align 4
  %47 = add nsw i32 %46, 1
  store i32 %47, i32* %5, align 4
  br label %17

48:                                               ; preds = %17
  br label %49

49:                                               ; preds = %48
  %50 = load i32, i32* %4, align 4
  %51 = add nsw i32 %50, 1
  store i32 %51, i32* %4, align 4
  br label %8

52:                                               ; preds = %8
  %53 = load i32, i32* %6, align 4
  ret i32 %53
}

declare dso_local i32 @entry_index(%struct.TYPE_4__* byval(%struct.TYPE_4__) align 8, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
